# op3-webots

op3_webots_ros2/: CMakeLists.txt  package.xml
op3_webots_ros2/launch/: robot_and_manager.launch.py
op3_webots_ros2/src/: op3_manager.cpp
robocup_behavior/: CMakeLists.txt  package.xml
robocup_behavior/behaviors/: behaviors.btproj  tests.xml
robocup_behavior/config/: bt.yaml
robocup_behavior/include/robocup_behavior/: twist_action.hpp
robocup_behavior/launch/: test_launch.py
robocup_behavior/src/: bt.cpp  twist_action.cpp
