<package format="3">
  <name>robocup_behavior</name>
  <version>0.0.1</version>
  <description>
    RoboCup behavior tree support.
  </description>

  <maintainer email="contact@spes.ai">Spes Robotics</maintainer>
  <license>Apache</license>
  <author>Spes Robotics</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>behaviortree_ros2</depend>
  <depend>btcpp_ros2_interfaces</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>